# perplexity-mcp

./: .env.example  .gitignore  .sparse_reasoning.md  .tmp-links-batch-1.md  .tmp-links-batch-2.md  .tmp-links-batch-3.md  .tmp-links-batch-4.md  .tmp-links-test.md  README.md  collect_links.py  links.md  pyproject.toml  requirements.txt
perplexity/: client.py  config.py  logger.py  mcp.py
perplexity_async/: client.py
tests/: test_config.py  test_logger.py  test_mcp.py  test_utils.py
